added css to contact and animation to svgs

--- a/index.html
+++ b/index.html
@@ -303,28 +303,36 @@
 				<div class="contact-inner-container">
 					<div class="contact-icon-container">
 						<div class="svg-container">
-							<a href="mailto:dannyhwangca@gmail.com" target="_blank">
-								<i class="fas fa-envelope-square"></i>
-								<h2>Email</h2>
-							</a>
+							<div class="svg-inner-container hvr-wobble-vertical">
+								<a href="mailto:dannyhwangca@gmail.com" target="_blank">
+									<i class="fas fa-envelope-square"></i>
+									<h2>Email</h2>
+								</a>
+							</div>
 						</div>
 						<div class="svg-container">
-							<a href="https://www.linkedin.com/in/dannyhwangca/" target="_blank">
-								<i class="fab fa-linkedin"></i>
-								<h2>Linkedin</h2>
-							</a>
+							<div class="svg-inner-container hvr-wobble-vertical">
+								<a href="https://www.linkedin.com/in/dannyhwangca/" target="_blank">
+									<i class="fab fa-linkedin"></i>
+									<h2>Linkedin</h2>
+								</a>
+							</div>
 						</div>
 						<div class="svg-container">
-							<a href="https://github.com/DannyHwangCA" target="_blank">
-								<i class="fab fa-github-square"></i>
-								<h2>Github</h2>
-							</a>
+							<div class="svg-inner-container hvr-wobble-vertical">
+								<a href="https://github.com/DannyHwangCA" target="_blank">
+									<i class="fab fa-github-square"></i>
+									<h2>Github</h2>
+								</a>
+							</div>
 						</div>
 						<div class="svg-container">
-							<a href="https://codepen.io/dannyhwangca" target="_blank">
-								<i class="fab fa-codepen"></i>
-								<h2>Codepen</h2>
-							</a>
+							<div class="svg-inner-container hvr-wobble-vertical">
+								<a href="https://codepen.io/dannyhwangca" target="_blank">
+									<i class="fab fa-codepen"></i>
+									<h2>Codepen</h2>
+								</a>
+							</div>
 						</div>
 					</div>
 					<div class="contact-info-container">
@@ -349,10 +357,10 @@
 								Contact 
 							</h2>
 							<p>
-								<b>Email:</b> dannyhwangca@gmail.com
+								<b>Email:</b> <a href="mailto:dannyhwangca@gmail.com">dannyhwangca@gmail.com</a>
 							</p>
 							<p>
-								<b>Phone: </b> (626) 244-5621
+								<b>Phone: </b> <a href="tel:16262445621">(626) 244-5621</a>
 							</p>
 							<h2 class="contact-info-title" style="margin-top: 15px;">
 								Links
