--- a/index.html
+++ b/index.html
@@ -339,13 +339,14 @@
 						<div class="contact-info left-contact-info">
 							<h2 class="contact-info-title">Location:</h2>
 							<p>
-								<b>Location:</b> 
+								<a href="https://goo.gl/maps/eEewLGWEG576mxCw7">
+									Eastvale, CA 92880 
+								</a>
 							</p>
 							<p>
-								Eastvale, CA 92880 
-							</p>
-							<p>
-								Greater Los Angeles Area
+								<a href="https://goo.gl/maps/eEewLGWEG576mxCw7">
+									Greater Los Angeles Area
+								</a>
 							</p>
 							<p>
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105882.26296547527!2d-117.65215090326444!3d33.9714472790308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcca122ea0b3d1%3A0x16b212b53bc73dde!2sEastvale%2C%20CA!5e0!3m2!1sen!2sus!4v1591056616558!5m2!1sen!2sus" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>								
@@ -377,11 +378,8 @@
 							<p>
 								<b>Resume:</b> <a href="">Download Here</a>
 							</p>
-							<h2 class="contact-info-title" style="margin-top: 15px;">
-								Work
-							</h2>
 							<p>
-								<b>Equilar</b> <a href="https://www.equilar.com/">https://www.equilar.com/</a>
+								<b>Equilar (work):</b> <a href="https://www.equilar.com/">https://www.equilar.com/</a>
 							</p>
 						</div>
 					</div>
