added min heigh to vh

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div class="master-outer-container">
 		
 			<a name="linkHome"></a>
-			<div id="home-trigger" class="home-container">
+			<div id="home-trigger" class="home-container standard-vh">
 				<div class="home-bg-container"></div>
 				<div class="home-plane-object">
 					<img src="images/ufo.png">
@@ -121,7 +121,7 @@
 			</div>
 
 			<a name="linkProject"></a>
-			<div id="project-trigger" class="outer-project-container">
+			<div id="project-trigger" class="outer-project-container standard-vh">
 				<div id="inner-project-container" class="inner-project-container">
 					<div class="project-h1-container">
 						<h1>Projects</h1>
@@ -179,7 +179,7 @@
 			</div>
 
 			<a name="linkArticle"></a>
-			<div id="article-trigger" class="outer-article-container">
+			<div id="article-trigger" class="outer-article-container standard-vh">
 				<div id="inner-article-container" class="inner-article-container">
 					<div class="search-input-container">
 						<div class="article-h1-container">
@@ -221,7 +221,7 @@
 			</div>
 
 			<a name="linkSite"></a>
-			<div id="site-trigger" class="site-container">
+			<div id="site-trigger" class="site-container standard-vh">
 				<div class="site-inner-container">
 					<h1 class="site-h1-title">About this site</h1>
 					<div class="main-site-info">
@@ -299,7 +299,7 @@
 			</div>
 
 			<a name="linkContact"></a>
-			<div id="contact-trigger" class="contact-outer-container">
+			<div id="contact-trigger" class="contact-outer-container standard-vh">
 				<div class="contact-inner-container">
 					<div class="contact-icon-container">
 						<div class="svg-container">
